2015-06-09  Markus Gans  <guru.mail@muenster.de>
	* Better contrast on 8 color terminals

2015-06-07  Markus Gans  <guru.mail@muenster.de>
	* Bug fix disable cursor on focus FSwitch
	* Hold down the mouse button displays FSwitch in a different color.

2015-04-07  Markus Gans  <guru.mail@muenster.de>
	* New class FSwitch
	* Add the watch example to demonstrate FSwitch
	* Version 0.1.1

2015-02-07  Markus Gans  <guru.mail@muenster.de>
	* Add a joined right-left-line character to the newfont
	* Use the object timer for the progress bar animation 
	  in the ui example program

2015-01-07  Markus Gans  <guru.mail@muenster.de>
	* Use the object timer for the click animation in FButton

2015-28-06  Markus Gans  <guru.mail@muenster.de>
	* Add exception handling for toLong() and toULong()  
	  in FString

2015-27-06  Markus Gans  <guru.mail@muenster.de>
	* Add toFloat(), toDouble() and setNumber(...) for 
	  floating point values to FString

2015-22-06  Markus Gans  <guru.mail@muenster.de>
	* Add a simple calculator with trigonometric functions

2015-21-06  Markus Gans  <guru.mail@muenster.de>
	* Add the possibility to draw double lines on overlapped 
	  flat lines for the 8x16graph font
	* Bug fix in FButton (mouse click with unsetClickAnimation())

2015-20-06  Markus Gans  <guru.mail@muenster.de>
	* Add the possibility to change the colors from FButton

2015-15-06  Markus Gans  <guru.mail@muenster.de>
	* Add the possibility to turn off click animation 
	  on FButton

2015-14-06  Markus Gans  <guru.mail@muenster.de>
	* correction for the modifier letter small x 
	  in the character map

2015-12-06  Markus Gans  <guru.mail@muenster.de>
	* Add Some mathematical signs to the character map

2015-28-05  Markus Gans  <guru.mail@muenster.de>
	* Add keyword 'explicit' to some constructors

2015-25-05  Markus Gans  <guru.mail@muenster.de>
	* Add a Mandelbrot set program

2015-24-05  Markus Gans  <guru.mail@muenster.de>
	* Bug fix in FLineEdit (ypos from the label)